Add order status api functionality
